@@ -29,6 +29,9 @@ EDS_VERSION=1.2.0-dev
 # Do not edit this file but set variables in Makefile.env
 ###########################################################
 
+# Earthworm Docker Sandbox Github Repository
+EDS_GITHUB_REPOSITORY=https://github.com/matteoquintiliani/earthworm-docker-sandbox
+
 # Set Docker Namespace for 'docker push'
 DOCKER_NAMESPACE = matteoquintiliani
 
@@ -156,6 +159,8 @@ info:
 	@make license
 	@echo "$(SEPLONGLINE)"
 	@echo "\
+\n\
+Available at: $(EDS_GITHUB_REPOSITORY)\n\
 \n\
 More detailed help information is reported by running 'make help'\n\
 "
@@ -712,6 +717,9 @@ check: _check_for_running
 
 _doc:
 	make version > doc/README_2_version.md
+	echo "" >> doc/README_2_version.md
+	echo "Available at: [$(EDS_GITHUB_REPOSITORY)]($(EDS_GITHUB_REPOSITORY))" >> doc/README_2_version.md
+	echo "" >> doc/README_2_version.md
 	echo "" > doc/README_5_make_help.md
 	echo "### Complete Help" >> doc/README_5_make_help.md
 	echo "" >> doc/README_5_make_help.md
