@@ -30,6 +30,7 @@ Release History
     - Add 'make EW_ENV=... check' for checking basic functioning within an Earthworm Environment.
     - Obsfucate some make rules by prefixing the underscore character '_'.
     - Change default make command to 'make info'.
+    - Add references to Github repository.
 
 * Release 1.1.2 (2020/04/09)
     - Copy files in a Earthworm Environment by running or executing a Docker Container.
